# Smart-Contracts

./: .gitignore  .stylish-haskell.yaml  README DEV.txt  README.md  cabal.project  hie.yaml  innovatio-founder-sc.cabal
Helpers/: Helpers.cabal
Helpers/src/Helpers/: CLI.hs  Constants.hs  Deploy.hs  Emulator.hs  OffChainEval.hs  OnChain.hs
app/: deploy.hs
docs/: TECHNICAL.md  TRANSACTIONS.md
src/: Constants.hs  Deploy.hs  OffChainHelpers.hs  Types.hs  files-contents-export-SC.txt
src/Campaign/: Helpers.hs  OnChain.hs  Types.hs
src/Campaign/Funds/: OnChain.hs  Types.hs
src/Generic/: Constants.hs  DeployHelpers.hs  EmulatorHelpers.hs  OffChainEval.hs  OffChainEvalTesting.hs  OffChainHelpers.hs  OnChainHelpers.hs  Types.hs
src/Others/: PolicyFT.hs  PolicyNFT.hs
src/Protocol/: Helpers.hs  OnChain.hs  Types.hs
src/Script/: OnChain.hs  Types.hs
tests/TestUtils/: Common.hs  Constants.hs  Helpers.hs  HelpersINNOVATIO.hs  Types.hs  TypesINNOVATIO.hs
tests/TestUtils/Contracts/: InitialData.hs
tests/TestUtils/Contracts/TxContext/: Campaign.hs  CampaignFunds.hs  Protocol.hs
tests/TestUtils/QuickCheckGen/: QuickCheckGen.hs  QuickCheckGenINNOVATIO.hs
tests/TestUtils/TestContext/: Asserts.hs  Evaluate.hs  Helpers.hs
tests/Tests/UnitTests/: Main.hs
tests/Tests/UnitTests/Contracts/Campaign/: Data.hs  MintingPolicy.hs  Transactions.hs  Validator.hs
tests/Tests/UnitTests/Contracts/Campaign/Funds/: Data.hs  MintingPolicy.hs  Validator.hs
tests/Tests/UnitTests/Contracts/Protocol/: Data.hs  MintingPolicy.hs  Validator.hs
