cabal-version: 2.4
name:          innovatio-founder
version:       0.1.0.0
author:        Manuel Padilla
maintainer:    manuelpad@gmail.com
build-type:    Simple
copyright:     © 2024 Manuel Padilla
license:       Apache-2.0
license-files: LICENSE

---------------------------------
flag no-use-serialize-onchain
  description:
    Use serialize data on chain code
  default:     False
  manual:      True

---------------------------------
flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.
  default:     False
  manual:      True

---------------------------------
-- Define a flag for controlling UPLC dumping
flag dump-uplc
  description: Enable dumping of UPLC files
  default:     False
  manual:      True

---------------------------------
common warnings-config
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wno-unused-packages 
    -- -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wunused-matches
    -Wunused-binds -Wno-unused-imports -fno-warn-orphans

---------------------------------
common plutus-tx-config
  ghc-options:
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fno-full-laziness -fno-spec-constr -fno-specialise -fno-strictness
    -fno-unbox-strict-fields -fno-unbox-small-strict-fields
    -fno-expose-all-unfoldings

  ---------------------------------
  -- DEFAULT GHC RECOMENDATION:
  -- https://plutus.cardano.intersectmbo.org/docs/using-plutus-tx/compiling-plutus-tx
  ---------------------------------
  -- DEFAULT Plutus Tx compiler options
  -- https://plutus.cardano.intersectmbo.org/docs/delve-deeper/plutus-tx-compiler-options
  ---------------------------------
  -- -fplugin-opt PlutusTx.Plugin:no-conservative-optimisation
  -- -fplugin-opt PlutusTx.Plugin:context-level=1
  -- -fplugin-opt PlutusTx.Plugin:no-coverage-all
  -- -fplugin-opt PlutusTx.Plugin:no-coverage-boolean
  -- -fplugin-opt PlutusTx.Plugin:no-coverage-location
  -- -fplugin-opt PlutusTx.Plugin:no-dump-compilation-trace
  -- -fplugin-opt PlutusTx.Plugin:no-dump-pir
  -- -fplugin-opt PlutusTx.Plugin:no-dump-tplc
  -- -fplugin-opt PlutusTx.Plugin:no-dump-uplc
  -- -fplugin-opt PlutusTx.Plugin:inline-constants
  -- -fplugin-opt PlutusTx.Plugin:max-cse-iterations=4
  -- -fplugin-opt PlutusTx.Plugin:max-simplifier-iterations-pir=12
  -- -fplugin-opt PlutusTx.Plugin:max-simplifier-iterations-uplc=12
  -- -fplugin-opt PlutusTx.Plugin:optimize
  -- -fplugin-opt PlutusTx.Plugin:no-pedantic
  -- -fplugin-opt PlutusTx.Plugin:no-preserve-logging
  -- -fplugin-opt PlutusTx.Plugin:profile-all=None
  -- -fplugin-opt PlutusTx.Plugin:relaxed-float-in
  -- -fplugin-opt PlutusTx.Plugin:no-remove-trace
  -- -fplugin-opt PlutusTx.Plugin:simplifier-beta
  -- -fplugin-opt PlutusTx.Plugin:simplifier-inline
  -- -fplugin-opt PlutusTx.Plugin:simplifier-remove-dead-bindings
  -- -fplugin-opt PlutusTx.Plugin:simplifier-unwrap-cancel
  -- -fplugin-opt PlutusTx.Plugin:strictify-bindings
  -- -fplugin-opt PlutusTx.Plugin:target-version=1.1.0
  -- -fplugin-opt PlutusTx.Plugin:typecheck
  -- -fplugin-opt PlutusTx.Plugin:verbosity=Quiet
  ---------------------------------
  ghc-options:
    -- -fplugin-opt PlutusTx.Plugin:verbosity=2 -fplugin-opt
    -- PlutusTx.Plugin:no-optimize -fplugin-opt
    -- PlutusTx.Plugin:dump-compilation-trace

  ---------------------------------
  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

  ---------------------------------
  if flag(dump-uplc)
    ghc-options: -fplugin-opt PlutusTx.Plugin:dump-uplc

  ---------------------------------
  -- https://plutus.cardano.intersectmbo.org/docs/using-plutus-tx/compiling-plutus-tx#extensions
  ---------------------------------
  default-extensions: Strict

---------------------------------
common common-all-deps-and-languange
  default-language:   Haskell2010
  build-depends:
    , aeson
    , base
    , base16-bytestring
    , base64-bytestring
    , bech32
    , bytestring
    , containers
    , data-default
    , directory
    , filepath
    , flat
    , freer-extras
    , freer-simple
    , hex-text
    , lens
    , MissingH
    , old-locale
    , openapi3
    , prettyprinter
    , random
    , regex
    , serialise
    , split
    , stm
    , text
    , time
    , utf8-string

  default-extensions:
    NoImplicitPrelude
    BangPatterns
    NumericUnderscores
    OverloadedStrings

---------------------------------
common common-deps-main-library
  build-depends:
    , cardano-addresses
    , cardano-api
    , cardano-binary
    , cardano-crypto-class
    , cardano-ledger-alonzo
    , cardano-ledger-babbage
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-node-emulator
    , cardano-wallet-core
    , data-default
    , playground-common
    , plutonomy
    , plutus-chain-index-core
    , plutus-contract
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-ledger-constraints
    , plutus-pab
    , plutus-script-utils
    , plutus-tx
    , plutus-tx-constraints
    , plutus-tx-plugin

---------------------------------
common common-deps-test-suites
  flags: +no-use-serialize-onchain
  build-depends:
    , base
    , mtl
    , plutonomy
    , plutus-contract
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-script-utils
    , plutus-simple-model
    , plutus-tx
    , plutus-tx-plugin
    , process
    , QuickCheck
    , quickcheck-instances
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , transformers

---------------------------------
library
  import:
    common-all-deps-and-languange, common-deps-main-library, plutus-tx-config, warnings-config

  build-depends:   cardano-helpers
  hs-source-dirs:  src
  exposed-modules:
    Campaign.Funds.OnChain
    Campaign.Funds.Types
    Campaign.Helpers
    Campaign.OnChain
    Campaign.Types
    Constants
    Deploy
    Others.PolicyFT
    Others.PolicyNFT
    Protocol.Helpers
    Protocol.OnChain
    Protocol.Types
    Script.OnChain
    Script.Types
    Types

-- Generic.CLIHelpers
-- Generic.Constants
-- Generic.DeployHelpers
-- Generic.EmulatorHelpers
-- Generic.OffChainEval
-- Generic.OffChainEvalTesting
-- Generic.OffChainHelpers
-- Generic.OnChainHelpers
-- Generic.PABHelpers
-- Generic.Types
---------------------------------
test-suite InnovatioFounderUnitTests
  import:
    common-all-deps-and-languange,  common-deps-test-suites, plutus-tx-config, warnings-config

  build-depends:  cardano-helpers
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: tests/Tests/UnitTests tests
  build-depends:  innovatio-founder
  other-modules:
    Contracts.Campaign.Transactions
    Contracts.Campaign.Validator
    Contracts.Protocol.Data
    Contracts.Protocol.MintingPolicy
    Contracts.Protocol.Validator
    TestUtils.Common
    TestUtils.Constants
    TestUtils.Types

-- Contracts.Campaign.Data
-- Contracts.Campaign.MintingPolicy
-- Contracts.Campaign.Funds.Validator
-- Contracts.Campaign.Funds.MintingPolicy
-- Contracts.Campaign.Funds.Data
---------------------------------
executable deploy
  import:
    common-all-deps-and-languange, plutus-tx-config, warnings-config

  main-is:        deploy.hs
  hs-source-dirs: app
  build-depends:  innovatio-founder

---------------------------------
